--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 <title>breasties</title>
-<h1>breasties</h1>
-<h2>breasties</h2>
+<style>
+  body {
+  background-image: url("https://media.discordapp.net/attachments/873039929968574527/933796259666485268/dumpy933796244101402675.gif");
+  background-repeat: repeat-y;
+}
+</style>
+<body>
+  <h1>breasties</h1>
+  <h2>breasties</h2>
+</body>
