--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   body {
   background-image: url("https://media.discordapp.net/attachments/873039929968574527/933796259666485268/dumpy933796244101402675.gif");
   background-repeat: repeat-y;
+  background-repeat: repeat-x;
 }
 </style>
 <body>
