--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <title>breasties</title>
 <style>
   body {
-  background-image: url("https://media.discordapp.net/attachments/873039929968574527/933796259666485268/dumpy933796244101402675.gif");
+  background-image: url("/blueviolet-transformed.jpg");
   background-repeat: repeat-y;
   background-repeat: repeat-x;
 }
