--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <style>
   body {
   background-image: url("/blueviolet-transformed.jpg");
-  background-repeat: repeat-y;
-  background-repeat: repeat-x;
+  height: 100%;
+  width: 100%;
 }
 </style>
 <body>
