--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <title>breasties</title>
 <style>
   body {
-  background-image: url("/blueviolet-transformed.jpg");
-  height: 100%;
-  width: 100%;
+  background: no-repeat center/100% url("/blueviolet-transformed.jpg");
 }
 </style>
 <body>
