aaaa I updated maybe make look good later

--- a/index.html
+++ b/index.html
@@ -1,38 +1,20 @@
-<title>breasties</title>
-<style>
-  body {
-  background: no-repeat center/100% url("/blueviolet-transformed.jpg");
-}
-</style>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>
+      Besties
+    </title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="keywords" content="Cohen, Cattn, Greenworld, Daza, Ender, JavaScythe, [MG], WorldPeace, Windgod, Abnumality, Avd3, SSD, ssd, Snoot">
+      <meta name="description" content="The one and only github page for us Besties!">
+    <style>
+      body {background-color:#ffffff;background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
+      h1{text-align:left;font-family:Garamond, serif;color:#000000;background-color:#ffffff;}
+      p {font-family:Times, serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#ffffff;}
+    </style>
+  </head>
 <body>
-  <h1>breasties</h1>
-  <h2>breasties</h2>
-  <p>Cohen</p>
-  <h1>breasties</h1>
-  <h2>breasties</h2>
-  <p>Cattn</p>
-  <h1>breasties</h1>
-  <h2>breasties</h2>
-  <p>Greenworld</p>
-  <h1>breasties</h1>
-  <h2>breasties</h2>
-  <p>Daza</p>
-  <h1>breasties</h1>
-  <h2>breasties</h2>
-  <p>Ender</p>
-  <h1>breasties</h1>
-  <h2>breasties</h2>
-  <p>JavaScythe</p>
-  <h1>breasties</h1>
-  <h2>breasties</h2>
-  <p>WorldPeace</p>
-  <h1>breasties</h1>
-  <h2>breasties</h2>
-  <p>Abnumality</p>
-  <h1>breasties</h1>
-  <h2>breasties</h2>
-  <p>Avad3</p>
-  <h1>breasties</h1>
-  <h2>breasties</h2>
-  <p>Snoot</p>
+  <h1>Besties</h1>
+  <p>Welcome to the Besties github! As we develop projects, we will add them here!</p>
 </body>
+</html>
